Setup test framework